--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tanstack/query-async-storage-persister": "^5.87.1",
+    "@tanstack/query-sync-storage-persister": "^5.87.1",
+    "@tanstack/react-query": "^5.87.1",
+    "@tanstack/react-query-persist-client": "^5.87.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -59,7 +63,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.9",
+    "vaul": "^1.1.2",
     "xlsx": "^0.18.5",
     "zod": "3.25.67"
   },
