--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tanstack/query-sync-storage-persister": "^5.87.1",
     "@tanstack/react-query": "^5.87.1",
     "@tanstack/react-query-persist-client": "^5.87.1",
+    "@types/jspdf": "^2.0.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -50,7 +51,9 @@
     "date-fns": "latest",
     "embla-carousel-react": "8.5.1",
     "geist": "latest",
+    "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
